Iniciando o css da página

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <title>Agency - Website</title>
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
 
         <div>
             <img id="header-fundo" src="/assets/header-fundo.png"/>
         </div>
 
-        <div class="container">
+        <div class="container-header container">
             <div class="header-logo">
                 <img src="/assets/Agency.png" alt="Agency - Website">
             </div>
@@ -57,9 +58,10 @@
         
     </header>
 
+      <!-- Primeira seção do site -->
     <section>
-     <div>
-        <div>
+     <div class="section-one container">
+        <div class="section-title">
             <h1>
                 Marketing is The Key of Business Sucess.
             </h1>
