--- a/index.html
+++ b/index.html
@@ -222,22 +222,23 @@
             <div class="section-five-recruiter">
                 <h2>Unique Solutions for <br /> Your Business</h2>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.
                 </p>
 
                 <img class="img-one" src="/assets/recruiters.png" />
-             
+
             </div>
 
             <div class="section-five-img">
-                <img src="/assets/Recruiter.png" width="650px"/>
+                <img src="/assets/Recruiter.png" width="650px" />
             </div>
         </div>
     </section>
 
-     <!-- Sexta seção do site -->
+    <!-- Sexta seção do site -->
 
-     <section class="section-six-main">
+    <section class="section-six-main">
         <div class="container section-bg">
             <span>TESTEMONIALS</span>
             <h2>What The People Thinks About Us</h2>
@@ -247,8 +248,23 @@
                     <div class="cards-peooples">
                         <div class="cards-infos">
                             <img src="/assets/Ellipse 6.png" />
-                            <h4>Jack Williamson</h4>
-                            <strong>One Year With Us</strong>
+                            <div class="infos-peooples">
+                                <h4>Jack Williamson</h4>
+                                <strong>One Year With Us</strong>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit sit</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="cards-peooples bg-two">
+                        <div class="cards-infos ">
+                            <img src="/assets/Ellipse 6.png" />
+                            <div class="infos-peooples">
+                                <h4>Jack Williamson</h4>
+                                <strong>One Year With Us</strong>
+                            </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit sit</p>
                     </div>
@@ -258,107 +274,101 @@
                     <div class="cards-peooples">
                         <div class="cards-infos">
                             <img src="/assets/Ellipse 6.png" />
-                            <h4>Jack Williamson</h4>
-                            <strong>One Year With Us</strong>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit sit</p>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="cards-peooples">
-                        <div class="cards-infos">
-                            <img src="/assets/Ellipse 6.png" />
-                            <h4>Jack Williamson</h4> <br>
-                            <strong>One Year With Us</strong>
+                            <div class="infos-peooples">
+                                <h4>Jack Williamson</h4>
+                                <strong>One Year With Us</strong>
+                            </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit sit</p>
                     </div>
                 </li>
             </ul>
         </div>
-     </section>
+    </section>
 
-    <section >
-        <h2>Latest News</h2>
-        <p>
-            There are many variations of passages of lorem lpsum available, <br /> but the majority have suffered
-            alteraction
-        </p>
+    <!-- Setima seção do site -->
+    <section class="section-seven-main">
+        <div class="container section-bg">
+            <h2>Latest News</h2>
+            <p>
+                There are many variations of passages of lorem lpsum available, <br /> but the majority have suffered
+                alteraction
+            </p>
 
-        <ul>
-            <li>
-                <div>
-                    <img src="/assets/pessoa1.png" alt="Jack Wilson" />
-                    <div>
-                        <div>
-                            <img src="/assets/icon-user.png" alt="">
-                            <span>
-                                Jack Wilson
-                            </span>
+            <ul class="list-peooples-cards">
+                <li>
+                    <div class="peooples-infos">
+                        <img src="/assets/pessoa1.png" alt="Jack Wilson" />
+                        <div class="peooples-dados">
+                            <div>
+                                <img src="/assets/icon-user.png" alt="icon peooples" width="20px">
+                                <span>
+                                    Jack Wilson
+                                </span>
+                            </div>
+
+                            <div>
+                                <img src="/assets/2012.png" alt="" width="20px">
+                                <span>
+                                    06 March 2022
+                                </span>
+                            </div>
                         </div>
-
-                        <div>
-                            <img src="" alt="">
-                            <span>
-                                06 March 2022
-                            </span>
-                        </div>
+                        <p>
+                            Discover cennect with great local business in your
+                        </p>
                     </div>
-                    <h4>
-                        Discover cennect with great local business in your
-                    </h4>
-                </div>
-            </li>
+                </li>
 
-            <li>
-                <div>
-                    <img src="/assets/pessoa2.png" alt="Jack Wilson" />
-                    <div>
-                        <div>
-                            <img src="/assets/icon-user.png" alt="">
-                            <span>
-                                Jack Wilson
-                            </span>
-                        </div>
+                <li>
+                    <div class="peooples-infos">
+                        <img src="/assets/pessoa2.png" alt="Jack Wilson" />
+                        <div class="peooples-dados">
+                            <div>
+                                <img src="/assets/icon-user.png" alt="icon peooples" width="20px">
+                                <span>
+                                    Jack Wilson
+                                </span>
+                            </div>
 
-                        <div>
-                            <img src="" alt="">
-                            <span>
-                                06 March 2022
-                            </span>
+                            <div>
+                                <img src="/assets/2012.png" alt="" width="20px">
+                                <span>
+                                    06 March 2022
+                                </span>
+                            </div>
                         </div>
+                        <p>
+                            Discover cennect with great local business in your
+                        <p>
                     </div>
-                    <h4>
-                        Discover cennect with great local business in your
-                    </h4>
-                </div>
-            </li>
+                </li>
 
-            <li>
-                <div>
-                    <img src="/assets/pessoa3.png" alt="Jack Wilson" />
-                    <div>
-                        <div>
-                            <img src="/assets/icon-user.png" alt="">
-                            <span>
-                                Jack Wilson
-                            </span>
-                        </div>
+                <li>
+                    <div class="peooples-infos">
+                        <img src="/assets/pessoa3.png" alt="Jack Wilson" />
+                        <div class="peooples-dados">
+                            <div>
+                                <img src="/assets/icon-user.png" alt="icon peooples" width="20px">
+                                <span>
+                                    Jack Wilson
+                                </span>
+                            </div>
 
-                        <div>
-                            <img src="" alt="">
-                            <span>
-                                06 March 2022
-                            </span>
+                            <div>
+                                <img src="/assets/2012.png" alt="" width="20px">
+                                <span>
+                                    06 March 2022
+                                </span>
+                            </div>
                         </div>
+                        <p>
+                            Discover cennect with great local business in your
+                        </p>
                     </div>
-                    <h4>
-                        Discover cennect with great local business in your
-                    </h4>
-                </div>
-            </li>
-        </ul>
+                </li>
+
+        </div>
     </section>
 
     <section>
