--- a/index.html
+++ b/index.html
@@ -381,20 +381,20 @@
             </p>
 
     
-            <div class="input-group mb-3 input-text">
-                <input type="text" class="form-control" placeholder="Enter your email..." aria-label="Recipient's username"
+            <div class="input-group mb-3 input-text ">
+                <input type="text" class="form-control div-input" placeholder="Enter your email..." aria-label="Recipient's username"
                     aria-describedby="button-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Botão</button>
+                    <button class="btn btn-outline-secondary btn-input" type="button" id="button-addon2">Get Started</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
-        <div>
-            <div>
-                <div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-list">
+                <div class="footer-divs-one">
                     <img src="/assets/logo-footer.png" alt="Agency - Website" />
 
                     <p>
@@ -402,7 +402,7 @@
                         alteraction
                     </p>
 
-                    <ul>
+                    <ul class="list-social">
                         <li>
                             <a href="#" target="_blank">
                                 <img src="/assets/linkedin.png" alt="Linkedin" />
@@ -423,7 +423,7 @@
                     </ul>
                 </div>
 
-                <div>
+                <div class="footer-divs">
                     <h5>Product</h5>
 
                     <ul>
@@ -453,7 +453,7 @@
                     </ul>
                 </div>
 
-                <div>
+                <div class="footer-divs">
                     <h5>Information</h5>
 
                     <ul>
@@ -483,8 +483,8 @@
                     </ul>
                 </div>
 
-                <div>
-                    <h5>Company/h5>
+                <div class="footer-divs">
+                    <h5>Company</h5>
 
                         <ul>
                             <li>
@@ -508,7 +508,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="footer-copy">
                 <p>
                     &copy; 2021 Real State - All Rights Reserved.
                 </p>
